Fixed lengthy textbox for Recipient by adding span.recipient to css.  Must have gotten deleted by accident.

--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -148,6 +148,11 @@ form.error h2 {
     width: auto;
     display: inline-block;}
 
+span.recipient {
+    float: left;
+    width: 49%;
+}
+
 span.sender {
 	float: right;
 	width: 49%;
