--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -175,7 +175,7 @@ form.search input, form.search input:active {
 	margin: 0;
 
 	display: inline;
-	width: 57%;
+	width: 52%;
 	border-radius: 0 3px 3px 0;
 }
 
@@ -210,7 +210,9 @@ form.search select {
 	margin: 0 -4px 0 0;
 	border-radius: 3px 0 0 3px;
 	-webkit-appearance: none;
-	-moz-appearance:window;
+    -moz-appearance: none;
+    text-indent: 0.01px;
+    text-overflow: '';
 }
 
 /* Browser Hack to get rid of dropdown - MSIE */
@@ -219,7 +221,7 @@ form.search select::-ms-expand {
 }
 
 /* Browser hack to get rid of dropdown - FF for Mac (Fix doesn't work on Windows) */
-@-moz-document url-prefix() {
+/*@-moz-document url-prefix() {
 form.search span.moz-select-wrap {
 	background:url('../img/down_chevron.png') left center no-repeat #196499;
 	padding: 5px 5px 5px 0px;
@@ -227,8 +229,11 @@ form.search span.moz-select-wrap {
 	color: white;
 	margin: 0 -4px 0 0;
 	border-radius: 3px 0 0 3px;
+	-moz-appearance: none;
+    text-indent: 0.01px;
+    text-overflow: '';
   }
-} 
+} */
 
 form.search select, form.search select:active, form.search select:hover {
 	outline: none;
