Log lines text-wrapping and indentation fixed.

--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -546,7 +546,7 @@ a.view-logs:hover {
 	cursor: pointer;
 }
 
-div.indent {
+/*div.indent {
     margin-left:24px;
     width:900px;
 }
@@ -560,4 +560,4 @@ div.indentLine {
     padding: 0px 20px;
     text-align: left;
     font-family: "Source Code Pro", courier new, courier, sans-serif;
-}
+}*/
