--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -570,18 +570,16 @@ a.view-more-results:active {
 	margin:9px 0 -1px;
 }
 
-/*div.indent {
-    margin-left:24px;
-    width:900px;
+a.no-more-results {
+    display: block;
+    color: white;
+    margin: 8px 0 0;
+    padding: 5px 0;
+    text-align: center;
+    background-color: #1E79BA;
+    border: 1px solid #003b65;
+    border-radius: 3px;
+    font-size:.875em;
+    box-shadow:0px 2px 0px #003b65;
+    cursor: default;
 }
-
-div.indentLine {
-    line-height:14px;
-    margin:0 28px;
-    text-indent: -40px;
-
-    font-size: .875em;
-    padding: 0px 20px;
-    text-align: left;
-    font-family: "Source Code Pro", courier new, courier, sans-serif;
-}*/
