--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -576,7 +576,7 @@ a.no-more-results {
     margin: 8px 0 0;
     padding: 5px 0;
     text-align: center;
-    background-color: #1E79BA;
+    background: #196499;
     border: 1px solid #003b65;
     border-radius: 3px;
     font-size:.875em;
