Small changes to the ctp and css - routers table doesn't expand too much anymore

--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -463,7 +463,7 @@ table.results tr.table-information td {
 	font-size: 1.25em;
 }
 
-span.canit-sender, span.canit-recipients {
+span.canit-sender, span.canit-recipients, span.routers-sender, span.routers-recipients {
 	display: block;
 	white-space: nowrap;
 	text-overflow: ellipsis;
