--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -399,7 +399,7 @@ table.results, table.results * {
 
 table.results {
 	width: 100%;
-	font-size: 0.9375em;
+	font-size: .91em;
 	font-weight: normal;
 }
 
