All spam score spans have the pointer cursor

--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -516,6 +516,7 @@ table.results td span.spam-score-rejected
 	background: #cbe7d3;
 	padding: 2px;
 	border-radius: 4px;
+    cursor: default;
 }
 
 table.results td span.has-incident {
