--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -547,68 +547,7 @@ table.results td span.spam-score-rejected {
     color: white;
 }
 
-div.rowOverlay {
-	font-size: inherit;
-	display: none;
-	overflow: hidden;
-}
-
-div.rowOverlay .external-link-wrap
-{
-	display: block;
-	overflow: hidden;
-	float: right;
-	padding: 0;
-	margin: 1px 0 0;
-}
-
-div.rowOverlay .external-link-wrap a {
-	display: block;
-	float: left;
-	text-decoration: none;
-	color: #196499;
-	margin: 4px 7px;
-	font-size: .75em;
-	padding: 3px;
-	border-radius: 4px;
-	/*color: white;*/
-	background: #196499;
-}
-
-div.rowOverlay .external-link-wrap a:hover {
-	background: #003b65;
-	cursor: pointer;
-}
-
-a.view-logs:hover {
-	cursor: pointer;
-}
-
-a.view-more-results {
-	display: block;
-	color: white;
-	margin: 8px 0 0;
-	padding: 5px 0;
-	text-align: center;
-	background: #196499;
-	border: 1px solid #003b65;
-	border-radius: 3px;
-	font-size:.875em;
-	box-shadow:0 2px 0 #003b65;
-}
-
-a.view-more-results:hover {
-	cursor: pointer;
-	background-color: #1B6DA8;
-}
-
-a.view-more-results:active {
-	background-color: #1E79BA;
-	box-shadow:0 1px 0 #003b65;
-	margin:9px 0 -1px;
-}
-
-a.no-more-results {
+a.results {
     display: block;
     color: white;
     margin: 8px 0 0;
@@ -620,6 +559,17 @@ a.no-more-results {
     font-size:.875em;
     box-shadow:0 2px 0 #003b65;
     cursor: default;
+}
+
+a.results.view-more:hover {
+	cursor: pointer;
+	background-color: #1B6DA8;
+}
+
+a.results.view-more:active {
+	background-color: #1E79BA;
+	box-shadow:0 1px 0 #003b65;
+	margin:9px 0 -1px;
 }
 
 .hidden {
