I added a restful endpoint to email tracking and filtering that will recieve POST requests from the gw servers.  The endpoint will save this data to a new database table in the syslog schema on sienna.byu.edu.  I added a new page that will display tabulated data from this new database.  It also allows the user to refresh the table without refreshing the page.  I did a somewhat-sizeable refactor of the pre-existing code to make it more modular by creating a default layout that is used for both pages.  I also took elements that are used on both pages or in multiple instances and put them into CakePHP view elements.  I added a menu bar to the top that allow the user to navigate from the main (log search) page to the gateway queue page I just created.  I refactored some of the css and javascript files and inserted them into the pages only where they're needed.  I also added jquery.js to the project.

--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -588,7 +588,7 @@ table.results td span.spam-score-rejected {
 
 a.results {
     display: block;
-    color: white;
+    color: white!important;
     margin: 8px 0 0;
     padding: 5px 0;
     text-align: center;
